<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nammakathey.app.ui.main.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_districts"
        android:name="com.nammakathey.app.ui.main.DistrictsFragment"
        android:label="@string/nav_districts"
        tools:layout="@layout/fragment_districts" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.nammakathey.app.ui.main.QuizListFragment"
        android:label="@string/nav_quiz"
        tools:layout="@layout/fragment_quiz_list" />

    <fragment
        android:id="@+id/navigation_badges"
        android:name="com.nammakathey.app.ui.main.BadgesFragment"
        android:label="@string/nav_badges"
        tools:layout="@layout/fragment_badges" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.nammakathey.app.ui.main.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
